[frontend] Fix mat-form-field size and overflow behaviour

--- a/apps/frontend/src/app/modules/shared/components/search-filter/search-filter.component.scss
+++ b/apps/frontend/src/app/modules/shared/components/search-filter/search-filter.component.scss
@@ -2,8 +2,15 @@
   width: 100%;
   box-sizing: border-box;
   padding: 10px 20px 0 20px;
+
 }
 
 .search-field-container {
   background-color: white;
+}
+
+
+
+:host ::ng-deep .mat-mdc-form-field-infix{
+  overflow:hidden
 }
